Spacing fixed, audio fixed

--- a/style.css
+++ b/style.css
@@ -34,13 +34,14 @@ header {
 }
 
 .buttons {
-  margin: 3em;
+  max-width: 400px;
+  margin: 3em auto;
   color: wheat;
   display: flex;
   justify-content: space-around;
 }
 
-.start, .stop {
+.start, .stop, .reset {
   display: flex;
   flex-direction: column;
   align-items: center;
